# mpi-time-sync

./: CMakeLists.txt  LICENSE  README.md
cmake_modules/: mpits-config.cmake.in
include/: mpi_clock_sync.h  mpi_time_provider.h  mpits.h  mpits.pc.in  mpits_helpers.h
src/clock_sync/: clock_sync_common.cpp  clock_sync_common.h  clock_sync_loader.cpp  clock_sync_loader.hpp  mpi_clock_sync.cpp  mpi_clock_sync_internal.h
src/clock_sync/clock_offset_algs/: ClockOffset.cpp  ClockOffset.hpp  ClockOffsetAlg.cpp  ClockOffsetAlg.hpp  PingpongClockOffsetAlg.cpp  PingpongClockOffsetAlg.hpp  SKaMPIClockOffsetAlg.cpp  SKaMPIClockOffsetAlg.hpp
src/clock_sync/sync_algorithms/: ClockPropagationSync.cpp  ClockPropagationSync.hpp  ClockSync.hpp  HCA2ClockSync.cpp  HCA2ClockSync.hpp  HCA3ClockSync.cpp  HCA3ClockSync.hpp  HCAAbstractClockSync.cpp  HCAAbstractClockSync.hpp  HCAClockSync.cpp  HCAClockSync.hpp  HierarchicalClockSync.cpp  HierarchicalClockSync.hpp  JKClockSync.cpp  JKClockSync.hpp  LinearModelFitter.hpp  LinearModelFitterDebug.cpp  LinearModelFitterDebug.hpp  LinearModelFitterStandard.hpp  TwoLevelClockSync.cpp  TwoLevelClockSync.hpp
src/clock_sync/sync_algorithms/offset/: HCA3OffsetClockSync.cpp  HCA3OffsetClockSync.hpp  SKaMPIClockSync.cpp  SKaMPIClockSync.hpp
src/clock_sync/sync_algorithms/utils/: communicator_utils.cpp  communicator_utils.h  hwloc_helpers.c  hwloc_helpers.h  sync_errors.hpp  sync_utils.cpp  sync_utils.h
src/clock_sync/sync_algorithms_adapters/: hca_sync.cpp  hca_sync.h  jk_sync.cpp  jk_sync.h  no_sync.cpp  no_sync.h  sk_sync.cpp  sk_sync.h  topo_aware_2l_sync.cpp  topo_aware_2l_sync.h  topo_aware_sync.cpp  topo_aware_sync.h
src/helpers/: sync_module_helpers.c  sync_module_helpers.h
src/helpers/dict/: cli_param_parser.cpp  cli_param_parser.h  mpits_dict.cpp  mpits_dict.h
src/helpers/misc/: misc_functions.c
src/time_provider/: mpi_time_provider.c
src/time_provider/clocks/: BaseClock.cpp  BaseClock.hpp  Clock.hpp  GettimeClock.h  GlobalClock.cpp  GlobalClock.hpp  GlobalClockLM.cpp  GlobalClockLM.hpp  GlobalClockOffset.cpp  GlobalClockOffset.hpp  MPIClock.cpp  MPIClock.hpp
test/clock_sync/01-basic_usage/: cs1.cpp
test/clock_sync/02-clock-check/: check_clock_accuracy.c  check_clock_accuracy.cpp  clock_drift_utils.c  clock_drift_utils.h
test/sanity_check/: CMakeLists.txt
test/sanity_check/clock/: CMakeLists.txt  verify_clock.c
test/sanity_check/clock_drift/: clock_drift_utils.c  clock_drift_utils.h  measure_clock_drift_rep.c
test/sanity_check/clock_sync_stress/: clock_sync_stress_test.c
test/sanity_check/local_clock_drift/: measure_local_clock_drift.c
test/sanity_check/rtt/: measure_rtt.c
test/sanity_check/sync_duration/: parse_test_options.c  parse_test_options.h  sync_duration.c
